<resources>
    <string name="app_name">Musicland</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="quantity">Quantity</string>
    <string name="order_price">Order Price</string>
    <string name="select_item">Select Item</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>

</resources>