<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content" android:layout_width="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/music_land_backstage"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/your_name"
        android:textColor="#A8FFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="151dp"


        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:text="@string/select_item"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <ImageView
        android:id="@+id/goodsImageView"

        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"

        app:srcCompat="@drawable/saxaphone" />


    <LinearLayout
        android:layout_width="422dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/order_price"
            android:textColor="#FDFDFD"
            android:textSize="30sp" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:text="@string/quantity"
            android:textColor="#FCFFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderPrice"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="2220$"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:backgroundTint="#908E8C8B"
            android:onClick="decreaseQuantity"
            android:text="@string/minus"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/zero"

            android:textAlignment="center"
            android:textColor="#A8FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#908E8C8B"
            android:onClick="increaseQuantity"
            android:text="@string/plus"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:backgroundTint="#00020202"
        android:text="@string/add_to_cart"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:onClick="addToCart"/>

</LinearLayout>
</ScrollView>



